--- a/index.html
+++ b/index.html
@@ -14,35 +14,38 @@
 <body>
     <div class="con">
         <!-- section before navbar -->
-        <div class="container d-flex justify-content-between fixed-top" style="background-color: #082959;">
-            <div>
-                <i class="fa-regular fa-circle-question fa-sm" style="color: #ffffff;"></i>
-                <p class="text-white d-inline-block">Have a question?</p>
-                <i class="fa-solid fa-phone fa-sm ms-3" style="color: #ffffff;"></i>
-                <p class="text-white d-inline-block">0994538234</p>
-                <i class="fa-solid fa-envelope fa-sm ms-3" style="color: #ffffff;"></i>
-                <p class="text-white d-inline-block">razanmayya2@gmail.com</p>
-            </div>
-            <div>
-                <i class="fa-solid fa-lock-open fa-sm" style="color: #ffffff;"></i>
-                <p class="text-white d-inline-block">log in</p>
-                <i class="fa-solid fa-user fa-sm ms-2" style="color: #ffffff;"></i>
-                <p class="text-white d-inline-block">Register</p>
+        <div class="container d-flex justify-content-between fixed-top" style="background-color: #233e6d;">
+            <div class="b w-100 d-flex justify-content-between">
+                <div>
+                    <i class="fa-regular fa-circle-question fa-sm" style="color: #ffffff;"></i>
+                    <p class="text-white d-inline-block">Have a question?</p>
+                    <i class="fa-solid fa-phone fa-sm ms-3" style="color: #ffffff;"></i>
+                    <p class="text-white d-inline-block">0994538234</p>
+                    <i class="fa-solid fa-envelope fa-sm ms-3" style="color: #ffffff;"></i>
+                    <p class="text-white d-inline-block">razanmayya2@gmail.com</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-lock-open fa-sm" style="color: #ffffff;"></i>
+                    <p class="text-white d-inline-block">log in</p>
+                    <i class="fa-solid fa-user fa-sm ms-2" style="color: #ffffff;"></i>
+                    <p class="text-white d-inline-block">Register</p>
+                </div>
             </div>
         </div>
+
         <div class="bg-light-subtle w-100" style="height: 1px;"></div>
 
         <!-- navbar -->
         <div class="container">
-            <nav class="navbar navbar-expand-lg fixed-top mt-5  mb-5" style="background-color: #082959;">
-                <div class=" container-fluid">
+            <nav class="navbar navbar-expand-lg fixed-top mt-5 mt-5  mb-5">
+                <div class="bbb container " style="background-color: #233e6d;">
                     <a class="navbar-brand text-light" href="#">LEARNER</a>
                     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <div class="collapse navbar-collapse position-relative" id="navbarTogglerDemo02" style="left: 20%;">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
@@ -258,10 +261,11 @@
 
                     </div>
                 </div>
-                <div class="col-6 position-relative">
+                <div class="col-5 position-relative">
                     <img src="./assests/img/img1.jpeg" alt="" class="w-100 position-absolute h-100"
                         style="bottom: 30px;">
                 </div>
+
             </div>
         </div>
     </div>
