--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDUCATION PLATFORM</title>
     <link rel="stylesheet" href="./assests/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
 
 <body>
     <div class="con">
         <!-- section before navbar -->
-        <div class="container d-flex justify-content-between fixed-top" style="background-color: #233e6d;">
+        <div class="container d-flex justify-content-between fixed-top pb-5" style="background-color: #3c5176;">
             <div class="b w-100 d-flex justify-content-between">
                 <div>
                     <i class="fa-regular fa-circle-question fa-sm" style="color: #ffffff;"></i>
@@ -37,8 +40,8 @@
 
         <!-- navbar -->
         <div class="container">
-            <nav class="navbar navbar-expand-lg fixed-top mt-5 mt-5  mb-5">
-                <div class="bbb container " style="background-color: #233e6d;">
+            <nav class="navbar navbar-expand-lg fixed-top mt-5 mt-5  mb-5 ">
+                <div class="bbb container rounded-5 rounded-top-0 p-3" style="background-color: #3c5176;">
                     <a class="navbar-brand text-light" href="#">LEARNER</a>
                     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -88,7 +91,7 @@
 
         <div class="container hero ">
             <div class="row d-flex justify-content-center mt-5">
-                <div class=" text-center mb-3 col-lg-4 col-md-8 col-sm-10">
+                <div class=" text-center mb-3 col-lg-4 col-md-8 col-sm-10 " style=" padding-top: 40px;">
                     <div class="card-body mt-5 pt-5">
                         <p class="card-text fw-bold text-light ">WATCH THE VIDEO</p>
                         <h2 class="card-title text-light">Education is the mother of Leadership</h2>
@@ -351,7 +354,7 @@
             </div>
             <div class="row row-cols-1 row-cols-md-3 g-4 mt-3 pb-5">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 hover-card">
                         <img src="./assests/img/img2.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
@@ -375,7 +378,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 hover-card">
                         <img src="./assests/img/img3.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
@@ -399,7 +402,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 hover-card">
                         <img src="./assests/img/img4.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
