--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="con">
         <!-- section before navbar -->
-        <div class="container d-flex justify-content-between fixed-top pb-5" style="background-color: #3c5176;">
+        <div class="container d-flex justify-content-between fixed-top pb-5 bg-primary">
             <div class="b w-100 d-flex justify-content-between">
                 <div>
                     <i class="fa-regular fa-circle-question fa-sm" style="color: #ffffff;"></i>
@@ -36,12 +36,12 @@
             </div>
         </div>
 
-        <div class="bg-light-subtle w-100" style="height: 1px;"></div>
+        <div class="bg-light-subtle w-100" style="height: 1px; "></div>
 
         <!-- navbar -->
         <div class="container">
             <nav class="navbar navbar-expand-lg fixed-top mt-5 mt-5  mb-5 ">
-                <div class="bbb container rounded-5 rounded-top-0 p-3" style="background-color: #3c5176;">
+                <div class="bbb container rounded-5 rounded-top-0 p-3 bg-primary" style="border-top: 1px solid snow;">
                     <a class="navbar-brand text-light" href="#">LEARNER</a>
                     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -294,7 +294,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card text-center mb-3">
-                    <i class="fa-regular fa-circle-check fa-2xl mt-3" style="color: #5f89d3;"></i>
+                    <i class="fa-solid fa-store fa-2xl mt-3" style="color: #7cacfd;"></i>
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -304,7 +304,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card text-center mb-3">
-                    <i class="fa-regular fa-circle-check fa-2xl mt-3" style="color: #5f89d3;"></i>
+                    <i class="fa-solid fa-spinner fa-2xl mt-3" style="color: #6c9aea;"></i>
                     <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -486,7 +486,7 @@
             </div>
             <div class="col-6 ">
                 <div class="sh">
-                    <img src="./assests/img/img1.jpeg" alt="" class=" w-100">
+                    <img src="./assests/img/film12.jpeg" alt="" class=" w-100">
 
                 </div>
             </div>
@@ -602,7 +602,7 @@
         </div>
     </div>
     <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
+        <div class="carousel-indicators" style="margin-bottom: 15%;">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -613,7 +613,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="d-block w-100 xx">
-                    <div class="carousel-caption d-md-block">
+                    <div class="carousel-caption d-md-block" style="margin-bottom: 15%;">
                         <h5 class=" text-primary text-uppercase">testimonials</h5>
                         <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis
                             aliquam est quae
