--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                             </li>
                             <li class="nav-item">
                             </li>
-                            <a class="nav-link text-light" href="#">Our staff</a>
                             <li class="nav-item">
+                                <a class="nav-link text-light" href="#">Our staff</a>
                             </li>
-                            <a class="nav-link text-light" href="#">News</a>
+                            <li>
+                                <a class="nav-link text-light" href="#">News</a>
+                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="#">About</a>
                             </li>
@@ -81,7 +84,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="#">Concat</a>
                             </li>
-                            <button type="button" class="btn btn-primary w-25">ENROLL NOW</button>
+                            <button type="button" class="btn btn-primary w-50 border-success-subtle">ENROLL NOW</button>
 
                         </ul>
                     </div>
@@ -602,7 +605,7 @@
         </div>
     </div>
     <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators" style="margin-bottom: 15%;">
+        <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -613,7 +616,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="d-block w-100 xx">
-                    <div class="carousel-caption d-md-block" style="margin-bottom: 15%;">
+                    <div class="carousel-caption d-md-block">
                         <h5 class=" text-primary text-uppercase">testimonials</h5>
                         <p style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis
                             aliquam est quae
